# libaums

./: .gitignore  .travis.yml  ISSUE_TEMPLATE.md  README.md  bintray.gradle  build.gradle  constants.gradle  gradle.properties  install.gradle  publish-module.gradle  publish-root.gradle  settings.gradle  settings.gradle.kts
.ci_helpers/: download_android-x86.py  instrumented_tests_qemu.sh
.github/workflows/: android.yml  instrumented_tests.yml
androidtests/: build.gradle
androidtests/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
httpserver/: build.gradle
httpserver/src/main/: AndroidManifest.xml
javafs/: build.gradle  proguard-rules.pro
javafs/src/main/: AndroidManifest.xml
libaums/: AndroidManifest.xml  CMakeLists.txt  bintray.gradle  build.gradle  proguard-rules.pro  project.properties
libaums/res/values/: strings.xml
libaums/src/c/: errno.c  usb.c
libaums/src/main/: AndroidManifest.xml
libusbcommunication/: .gitignore  CMakeLists.txt  README.md  build.gradle
libusbcommunication/src/androidTest/java/me/jahnen/libaums/: LibAumsTest.kt
libusbcommunication/src/c/: log.h  usb.c
libusbcommunication/src/main/: AndroidManifest.xml
libusbcommunication/src/main/java/me/jahnen/libaums/libusbcommunication/: ErrNoIOException.kt  LibusbCommunication.kt  LibusbError.kt  LibusbException.kt
storageprovider/: build.gradle  proguard-rules.pro
storageprovider/src/main/: AndroidManifest.xml
usbfileman/: AndroidManifest.xml  proguard-project.txt  project.properties
(+420 files in other folders)
